<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <!-- Main Content LinearLayout -->
    <LinearLayout
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EnterOne"
            android:textColor="@color/darkGray"
            android:textSize="30sp"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!-- First Name -->
            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/FirstName"
                android:inputType="textPersonName"
                android:layout_marginEnd="8dp" />

            <!-- Last Name -->
            <EditText
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lastName"
                android:inputType="textPersonName" />
        </LinearLayout>

        <!-- Phone Number -->
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNum"
            android:inputType="phone" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <Button
                android:layout_gravity="center"
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AddPassenger"
                android:layout_marginBottom="8dp" />

            <Button
                android:layout_gravity="center"
                android:id="@+id/back_to_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:text="@string/submitList" />

        </LinearLayout>

        <!-- Accumulating Passenger List -->
        <TextView
            android:id="@+id/accum_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:background="@color/gray"
            android:textColor="@color/yellow"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Accumulating" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
